MANUAL COMMIT modified run.sh